@@ -218,3 +218,9 @@ org.castor.transactionmanager.InitializeAtRegistration=false
 # the generated value of an identity column; default to false
 #
 org.castor.jdo.use.jdbc30=false
+
+#
+# Property specifying whether to use ANSI-compliant SQL for MS SQL Server.
+# defaults to false
+#
+org.exolab.castor.jdo.sqlserver.ansi-compliant=false
